модальное окно отзывы

--- a/index.html
+++ b/index.html
@@ -515,85 +515,110 @@
             <ul class="reviews__list">
                 <li class="reviews__item">
                     <div class="reviews__avatar grayscale" style="background-image:url(image/avatars/reviews-avatar-1.png);">
-                        <div class="reviews__content">        
-                            <h2 class="reviews__name">Константин Спилберг</h2>
-                            <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
-                            Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                            <a href="#" class="reviews__more-link btn">подробнее</a>
+                        <div class="reviews__content">   
+                            <div class="reviews__content-wrap">     
+                                <h2 class="reviews__name">Константин Спилберг</h2>
+                                <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                                Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            </div>
+                            <button href="#" class="reviews__more-link btn">подробнее</button>
                         </div>
                     </div>
                 </li>
                 <li class="reviews__item">
                     <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-2.png);">
                     <div class="reviews__content">        
-                            <h2 class="reviews__name">Константин Спилберг</h2>
-                            <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
-                            Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                            <a href="#" class="reviews__more-link btn">подробнее</a>
+                             <div class="reviews__content-wrap">     
+                                <h2 class="reviews__name">Константин Спилберг</h2>
+                                <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                                Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            </div>
+                            <button href="#" class="reviews__more-link btn">подробнее</button>
                         </div>
                     </div>
                 </li>
                 <li class="reviews__item">
                     <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-3.png);">
                     <div class="reviews__content">        
-                            <h2 class="reviews__name">Константин Спилберг</h2>
-                            <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
-                            Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                            <a href="#" class="reviews__more-link btn">подробнее</a>
+                            <div class="reviews__content-wrap">     
+                                <h2 class="reviews__name">Константин Спилберг</h2>
+                                <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                                Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            </div>
+                            <button href="#" class="reviews__more-link btn">подробнее</button>
                         </div>
                     </div>
                 </li>
                 <li class="reviews__item">
                     <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-4.png);">
                     <div class="reviews__content">        
-                            <h2 class="reviews__name">Константин Спилберг</h2>
-                            <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
-                            Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                            <a href="#" class="reviews__more-link btn">подробнее</a>
+                            <div class="reviews__content-wrap">     
+                                <h2 class="reviews__name">Константин Спилберг</h2>
+                                <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                                Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            </div>
+                            <button href="#" class="reviews__more-link btn">подробнее</button>
                         </div>
                     </div>
                 </li>
                 <li class="reviews__item">
                     <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-5.png);">
                         <div class="reviews__content">        
-                            <h2 class="reviews__name">Константин Спилберг</h2>
-                            <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
-                            Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                            <a href="#" class="reviews__more-link btn">подробнее</a>
+                            <div class="reviews__content-wrap">     
+                                <h2 class="reviews__name">Константин Спилберг</h2>
+                                <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                                Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            </div>
+                            <button href="#" class="reviews__more-link btn">подробнее</button>
                         </div>
                     </div>
                 </li>
                 <li class="reviews__item">
                     <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-6.png);">
                         <div class="reviews__content">        
-                            <h2 class="reviews__name">Константин Спилберг</h2>
-                            <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
-                            Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                            <a href="#" class="reviews__more-link btn">подробнее</a>
+                           <div class="reviews__content-wrap">     
+                                <h2 class="reviews__name">Константин Спилберг</h2>
+                                <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                                Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            </div>
+                            <button href="#" class="reviews__more-link btn">подробнее</button>
                         </div>
                     </div>
                 </li>
                 <li class="reviews__item">
                     <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-7.png)">
                         <div class="reviews__content">        
-                            <h2 class="reviews__name">Константин Спилберг</h2>
-                            <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
-                            Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                            <a href="#" class="reviews__more-link btn">подробнее</a>
+                            <div class="reviews__content-wrap">     
+                                <h2 class="reviews__name">Константин Спилберг</h2>
+                                <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                                Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            </div>
+                            <button href="#" class="reviews__more-link btn">подробнее</button>
                         </div>
                     </div>
                 </li>
                 <li class="reviews__item"  >
                     <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-8.png);">
                     <div class="reviews__content">        
-                            <h2 class="reviews__name">Константин Спилберг</h2>
-                            <p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
-                            Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                            <a href="#" class="reviews__more-link btn">подробнее</a>
+                           <div class="reviews__content-wrap">     
+                                <h2 class="reviews__name">Константин Спилберг</h2>
+                                <p class="reviews__text">Вообще рандомный текст для того, чтобы проверить будет ли выводится на экран
+                                    разный текст или будет всегда одно и тоже чт оне очень классно на самом то деле.</p>
+                            </div>
+                            <button href="#" class="reviews__more-link btn">подробнее</button>
                         </div>
                     </div>
                 </li>
             </ul>
+            <!-- <div class="modal reviews-modal">
+                <div class="reviews-modal__popup">
+                    <div class="reviews-modal__content reviews__content">
+                    </div>
+                    <div class="reviews-modal__close">
+                        <a href="#" class="modal__close">x</a>
+                    </div>
+                </div>
+            </div> -->
         </section>
         <!-- <section class="our-work section">
             КАК мы РАБОТАЕМ
@@ -796,6 +821,15 @@
                 <li class="change__item"><a href="#" class="change__link"></a></li>
             </ul>
         <!-- </aside> -->
+    </div>
+    <div class="modal reviews-modal">
+        <div class="reviews-modal__popup">
+            <div class="reviews-modal__content reviews__content">
+            </div>
+            <div class="reviews-modal__close">
+                <a href="#" class="modal__close">x</a>
+            </div>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
