изменен размер текста в модалке

--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
     </div>
     <div class="modal reviews-modal">
         <div class="reviews-modal__popup">
-            <div class="reviews-modal__content reviews__content">
+            <div class="reviews-modal__content">
             </div>
             <div class="reviews-modal__close">
                 <a href="#" class="modal__close">x</a>
