изменениия по комменатриям

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         <section class="reviews section">
             <ul class="reviews__list">
                 <li class="reviews__item">
-                    <div class="reviews__avatar grayscale" style="background-image:url(image/avatars/reviews-avatar-1.png);">
+                    <div class="reviews__avatar grayscale" style="background-image:url(image/avatars/reviews-avatar-1.jpg);">
                         <div class="reviews__content">   
                             <div class="reviews__content-wrap">     
                                 <h2 class="reviews__name">Константин Спилберг</h2>
@@ -526,7 +526,7 @@
                     </div>
                 </li>
                 <li class="reviews__item">
-                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-2.png);">
+                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-2.jpg);">
                     <div class="reviews__content">        
                              <div class="reviews__content-wrap">     
                                 <h2 class="reviews__name">Константин Спилберг</h2>
@@ -538,7 +538,7 @@
                     </div>
                 </li>
                 <li class="reviews__item">
-                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-3.png);">
+                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-3.jpg);">
                     <div class="reviews__content">        
                             <div class="reviews__content-wrap">     
                                 <h2 class="reviews__name">Константин Спилберг</h2>
@@ -550,7 +550,7 @@
                     </div>
                 </li>
                 <li class="reviews__item">
-                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-4.png);">
+                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-4.jpg);">
                     <div class="reviews__content">        
                             <div class="reviews__content-wrap">     
                                 <h2 class="reviews__name">Константин Спилберг</h2>
@@ -562,7 +562,7 @@
                     </div>
                 </li>
                 <li class="reviews__item">
-                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-5.png);">
+                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-5.jpg);">
                         <div class="reviews__content">        
                             <div class="reviews__content-wrap">     
                                 <h2 class="reviews__name">Константин Спилберг</h2>
@@ -574,7 +574,7 @@
                     </div>
                 </li>
                 <li class="reviews__item">
-                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-6.png);">
+                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-6.jpg);">
                         <div class="reviews__content">        
                            <div class="reviews__content-wrap">     
                                 <h2 class="reviews__name">Константин Спилберг</h2>
@@ -586,7 +586,7 @@
                     </div>
                 </li>
                 <li class="reviews__item">
-                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-7.png)">
+                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-7.jpg)">
                         <div class="reviews__content">        
                             <div class="reviews__content-wrap">     
                                 <h2 class="reviews__name">Константин Спилберг</h2>
@@ -598,7 +598,7 @@
                     </div>
                 </li>
                 <li class="reviews__item"  >
-                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-8.png);">
+                    <div class="reviews__avatar" style="background-image:url(image/avatars/reviews-avatar-8.jpg);">
                     <div class="reviews__content">        
                            <div class="reviews__content-wrap">     
                                 <h2 class="reviews__name">Константин Спилберг</h2>
@@ -717,11 +717,11 @@
                     </label>
                     <label class="order__form-block">
                       <div class="order__form-label">Квартира</div>
-                      <input class="order__form-input" name="appt" type="text" placeholder="" required>
+                      <input class="order__form-input room" name="appt" type="text" placeholder="" required>
                     </label>
                     <label class="order__form-block">
                       <div class="order__form-label">Этаж</div>
-                      <input class="order__form-input" name="floor" type="text" placeholder="" required>
+                      <input class="order__form-input floor" name="floor" type="text" placeholder="" required>
                     </label>
                   </div>
                 </div>
